--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,22 @@
 <!DOCTYPE html> 
 <html>
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>Burger</title>
     <style>
-        body {
-            backgroud-image: url();
-        }
+        @font-face {
+                    font-family: canterbury;
+                    src: url(/Users/jeremiahhuerta/Library/Fonts/canterbury.regular.ttf);
+                }
+                    body {
+                       background-color: red;
+                    }
+                    h1{
+                        font-family: canterbury;
+                        padding-top: 10%;
+                        text-align: center;
+                        color: yellow;
+                    }
     </style>
 </head>
 <body>
